RESOLVED FIXED139326
[iOS] Query -[WAKWindow screenScale] instead of using WKGetScreenScaleFactor()
https://bugs.webkit.org/show_bug.cgi?id=139326
Summary [iOS] Query -[WAKWindow screenScale] instead of using WKGetScreenScaleFactor()
Daniel Bates
Reported 2014-12-05 17:00:34 PST
We should use the screen scale factor of the WAKWindow instead of querying WKGetScreenScaleFactor() for it when taking a snapshot in DumpRenderTree as the former reflects the scale factor that is used in WebKit.
Attachments
Patch (2.49 KB, patch)
2014-12-05 17:02 PST, Daniel Bates
andersca: review+
Daniel Bates
Comment 1 2014-12-05 17:02:11 PST
Daniel Bates
Comment 2 2014-12-05 17:09:24 PST
Note You need to log in before you can comment on or make changes to this bug.