[iOS] Query -[WAKWindow screenScale] instead of using WKGetScreenScaleFactor() https://bugs.webkit.org/show_bug.cgi?id=139326

Reviewed by Anders Carlsson.

Ask the window for its screen scale factor instead of calling WKGetScreenScaleFactor()
to query the OS for it. This approach will ensure DumpRenderTree takes the snapshot
using the same scale factor as used in WebKit.

* DumpRenderTree/ios/PixelDumpSupportIOS.mm:
(createBitmapContextFromWebView):

Canonical link: https://commits.webkit.org/157189@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@176897 268f45cc-cd09-0410-ab3c-d52691b4dbfc